--- a/szablon/blocks/panelAutobusy/_panelAutobusy.sass
+++ b/szablon/blocks/panelAutobusy/_panelAutobusy.sass
@@ -19,10 +19,10 @@
   overflow: hidden
   transform: scale(1, 1)
   +TAB_MAX
-    position: absolute !important
+    position: relative !important
     width: 100% !important
-    margin: 55px 0 0
-    bottom: 0 !important
+    margin: 55px auto 0
+    //bottom: 0 !important
     top: 0 !important
 
   &.-hidden
@@ -36,6 +36,8 @@
   &__wrapper
     position: relative
     padding: 20px
+    +TAB_MAX
+      overflow: scroll
   &__title
     font-family: Lato, sans-serif
     font-weight: 500
