--- a/szablon/blocks/panelDodajAutobus/_panelDodajAutobus.sass
+++ b/szablon/blocks/panelDodajAutobus/_panelDodajAutobus.sass
@@ -1,13 +1,14 @@
 @charset "UTF-8"
 .panelDodajAutobus__dragger
-  top: 50px
-  right: 0
-  margin-right: 20px
   position: absolute
+  top: 0
+  margin: 0 auto
+  left: 0
+  right: 0
 .panelDodajAutobus
   transition: transform 0.36s ease
   position: absolute
-  max-width: 400px
+  max-width: 800px
   width: 100%
   height: auto
   top: 0
@@ -15,7 +16,7 @@
   left: 0
   z-index: 100
   opacity: 1
-  margin: 0
+  margin: 55px 20px 20px 20px
   background-color: rgba(255, 255, 255,0.95)
   border: 1px solid rgba(255, 255, 255, 1)
   border-radius: 5px
@@ -23,8 +24,11 @@
   overflow: hidden
   transform: scale(1, 1)
   +TAB_MAX
-    position: relative
-
+    position: relative !important
+    width: 100% !important
+    margin: 55px auto 0
+    //bottom: 0 !important
+    top: 0 !important
   &.-hidden
     opacity: 0
     z-index: 0
@@ -34,6 +38,8 @@
   &__wrapper
     position: relative
     padding: 20px
+    +TAB_MAX
+      overflow: scroll
   &__title
     font-family: Lato, sans-serif
     font-weight: 500
@@ -170,7 +176,7 @@
     margin-top: 20px
     margin-bottom: 5px
     display: flex
-    justify-content: flex-start
+    justify-content: space-around
     flex-direction: row
     +PHONE_ONLY
       justify-content: center
@@ -246,7 +252,7 @@
     opacity: 0.4
     &:hover
       opacity: 0.8
-    .panelAutobusy__icon
+    .panelDodajAutobus__icon
       font-size: 1.8em !important
   &__icon
     font-size: 3em
