Wstępne przygotowanie panelu użytkowników

--- a/szablon/jade/_panelUsers.jade
+++ b/szablon/jade/_panelUsers.jade
@@ -5,24 +5,18 @@
     .panelUsers__navigation
       a(href="#").panelUsers__navigation__item#panel-DodajUsersButton Dodaj Użytkownika
     .panelUsers__content
-      .panelUsers__content__Title Lista Autobusów
+      .panelUsers__content__Title Lista Użytkowników
       .panelUsers__content__Filtr
         .panelUsers__content__Filtr__item
-          input(placeholder="Szukaj autobusu...")
-        .panelUsers__content__Filtr__item
-          input(placeholder="Filtr stanów autobusu")
-        .panelUsers__content__Filtr__item
-          input(placeholder="Typ autobusu")
-        .panelUsers__content__Filtr__item
-          input(placeholder="Biletomat")
+          input(placeholder="Szukaj użytkownika...")
       .panelUsers__contentList
 
         .panelList
           .panelList__header
             .panelList__headeritemType Typ
-            .panelList__headeritemName Numer Autobusu
-            .panelList__headeritemStatus Status
-            .panelList__headeritemBiletomat Biletomat
+            .panelList__headeritemName Email
+            .panelList__headeritemStatus Ranga
+            .panelList__headeritemBiletomat Status
             .panelList__headeritemnavigation Szczegóły
           .panelUsers__list.panelList__content
             .panelList__item
