Poprawa paneli + flat design

--- a/szablon/jade/_header.jade
+++ b/szablon/jade/_header.jade
@@ -1,8 +1,9 @@
 //
    Created by salimike on 18.03.16.
-
+.bar
 .header
   .header__corner
+    i.fa.fa-bars
   .header__switcher.-hidden
     .background
     ul.header__panel
@@ -31,8 +32,13 @@
           span.header__buttonIconBG
             .header__buttonIcon.fa.fa-eye
           | Kontrole
+.headerLogo
+  i.fa.fa-bus
+  span
+    b mpk
 .headerProfile
   .headerProfile__corner
+    i.fa.fa-gears
   .headerProfile__switcher.-hidden
     .background
     ul.headerProfile__panel
