--- a/szablon/blocks/header/_header.sass
+++ b/szablon/blocks/header/_header.sass
@@ -1,24 +1,37 @@
 @charset "UTF-8"
+.bar
+  height: 40px
+  width: 100%
+  z-index: 100
+  background: rgba(60,141,188,0.9)
+  position: absolute
+
 .header
   &__corner
     position: absolute
-    width: 45px
-    height: 45px
+    width: 40px
+    height: 40px
     top: 0
-    right: 0
-    left: 0
+    right: 40px
+    //left: 0
     z-index: 103
     margin: 0 auto
-    background-image: url(../blocks/header/src/headerLogo.png)
-    background-size: 100% 100%
+    //background-image: url(../blocks/header/src/headerLogo.png)
+    //background-size: 100% 100%
     opacity: 0.9
     cursor: pointer
     &:hover
       transition: opacity 0.36s ease
       opacity: 1
+      background: #367fa9
     +PHONE_ONLY
       left: 0
       right: 100%
+    i
+      font-size: 20px
+      padding: 10px
+      color: #fff
+
 
   &__switcher
     transition: transform 0.36s ease, background 0.8s ease
@@ -27,7 +40,7 @@
     left: 0
     width: 100%
     height: 100%
-    background: rgba(0, 0, 0, 0.8)
+    background: rgba(0, 0, 0, 0.95)
     z-index: 102
     padding: 40px
     text-align: left
@@ -77,19 +90,25 @@
 .headerProfile
   &__corner
     position: absolute
-    width: 45px
-    height: 45px
+    width: 40px
+    height: 40px
     top: 0
-    right: 0
+    right: 1px
     z-index: 103
     margin: 0 auto
-    background-image: url(../blocks/header/src/headerGear.png)
-    background-size: 100% 100%
+    //background-image: url(../blocks/header/src/headerGear.png)
+    //background-size: 100% 100%
     opacity: 0.9
     cursor: pointer
     &:hover
       transition: opacity 0.36s ease
       opacity: 1
+      background: #367fa9
+    i
+      font-size: 20px
+      padding: 10px
+      color: #fff
+
 
   &__switcher
     transition: transform 0.36s ease, background 0.8s ease
@@ -98,7 +117,7 @@
     left: 0
     width: 100%
     height: 100%
-    background: rgba(0, 0, 0, 0.8)
+    background: rgba(0, 0, 0, 0.95)
     z-index: 102
     padding: 40px
     text-align: left
@@ -148,12 +167,12 @@
   position: absolute
   max-width: 250px
   width: 100%
-  height: 38px
-  top: 4px
-  right: 50px
+  height: 40px
+  top: 0px
+  right: 80px
   z-index: 100
   margin: 0 auto
-  background-color: rgba(57, 73, 171, 0.8)
+  //background-color: rgba(57, 73, 171, 0.8)
   border-radius: 5px
   opacity: 0.9
   cursor: pointer
@@ -178,3 +197,18 @@
     max-width: 200px
     span
       font-size: 9px
+.headerLogo
+  width: 120px
+  height: 40px
+  position: absolute
+  z-index: 101
+  color: #fff
+  padding: 8px 20px
+  i
+    font-size: 25px
+  span
+    margin-left: 7px
+    font-size: 19px
+    position: absolute
+  +PHONE_ONLY
+    display: none
