--- a/szablon/blocks/panelDodajPrzystanek/_panelDodajPrzystanek.sass
+++ b/szablon/blocks/panelDodajPrzystanek/_panelDodajPrzystanek.sass
@@ -8,7 +8,7 @@
 .panelDodajPrzystanek
   transition: transform 0.36s ease
   position: absolute
-  max-width: 800px
+  max-width: 700px
   width: 100%
   height: auto
   top: 0
@@ -17,10 +17,8 @@
   z-index: 100
   opacity: 1
   margin: 55px 20px 20px 20px
-  background-color: rgba(255, 255, 255,0.95)
-  border: 1px solid rgba(255, 255, 255, 1)
-  border-radius: 5px
-  box-shadow: 0 0px 10px 0 rgba(0, 0, 0, 0.3)
+  background-color: rgba(255, 255, 255,1)
+  box-shadow: 0 1px 1px rgba(0,0,0,0.1)
   overflow: hidden
   transform: scale(1, 1)
   +TAB_MAX
@@ -43,16 +41,19 @@
   &__title
     font-family: Lato, sans-serif
     font-weight: 500
-    line-height: 26px
-    margin: 5px auto 5px
-    font-size: 25.5px
-    letter-spacing: 2px
-    text-align: left
-    //text-transform: uppercase
-    //color: #4AAED4
+
+    font-size: 15px
+
+    text-align: center
+
+    background: #3c8dbc
+    color: #fff
+    padding: 5px
+    opacity: 0.9
+
     +PHONE_ONLY
       text-align: center
-      font-size: 19px
+
   &__subtitle
     font-family: Lato, sans-serif
     font-weight: 300
@@ -61,7 +62,7 @@
     font-size: 12px
     letter-spacing: 2px
     text-align: left
-    //text-transform: uppercase
+
     color: #222
     font-style: italic
     +PHONE_ONLY
@@ -176,7 +177,7 @@
     margin-top: 20px
     margin-bottom: 5px
     display: flex
-    justify-content: space-around
+    justify-content: flex-end
     flex-direction: row
     +PHONE_ONLY
       justify-content: center
@@ -186,7 +187,7 @@
       flex-shrink: 1
       font-size: 10px
       text-transform: uppercase
-      background: rgba(57, 73, 171, 0.8)
+      background: #4F98C2
       color: white
       border: none
       padding: 10px 10px
@@ -197,7 +198,11 @@
       text-decoration: none !important
       text-align: center
       &:hover
-        background: rgb(57, 73, 171)
+        background: rgba(60, 141, 188, 1)
+      &.green
+        background: #00a65a
+        &:hover
+          background: #008d4c
 
   &__content
     //border-top: 2px solid #D2E3E9
@@ -208,50 +213,125 @@
       line-height: 1.3
       letter-spacing: 1.25px
       text-align: left
+      text-transform: uppercase
       color: #222
+      padding-bottom: 15px
       +PHONE_ONLY
         text-align: center
-    &__Filtr
+    &__form
       display: flex
       align-content: space-between
       flex-wrap: wrap
+      justify-content: space-between
       &__item
-        flex-basis: 25%
-        padding: 10px
-        &:first-of-type
-          padding-left: 0
-        &:last-of-type
-          padding-right: 0
+
+        &.check
+          flex-basis: auto
+          text-align: center
+          margin-right: 2px
+
+        overflow: hidden
+        flex-basis: 30%
+        padding: 10px 0
+        margin: 5px 0
+
         input
+
           box-shadow: none !important
           outline: none
           font-weight: 400
           width: 100%
           display: block
-          margin: 5px auto
+          //margin: 5px auto
           padding: 8px 10px
           border-radius: 0
-          border-top: 0
-          border-left: 0
-          border-right: 0
-          border-bottom: 2px solid rgba(156, 150, 156, 0.25)
+          border: 1px solid #aaa
           font-size: 12px
-          &:focus
-            border-bottom: 2px solid rgba(57, 73, 171, 0.5)
+
+        input[type=checkbox]
+          display: none
+          &:checked + label:before
+            content: "\2713"
+            //font-size: 22px
+            color: #fff
+            text-align: center
+            line-height: 25px
+            background-color: #3c8dbc
+            border: 1px solid #3c8dbc
+        label
+          display: inline-block
+          cursor: pointer
+          position: relative
+          height: 22px
+          width: 22px
+          &:before
+            border-radius: 66px
+            border: 1px solid #aaa
+            content: ""
+            display: inline-block
+            width: 25px
+            height: 25px
+            position: absolute
+            left: 0
+        //bottom: 1px
         +PHONE_ONLY
           flex-basis: 100%
           padding: 0
+        p
+          font-size: 10px
+          line-height: 10px
+          letter-spacing: 1px
+        span.item
+          margin-bottom: 5px
+          display: block
+
+        .select2
+          &-container
+            .select2-selection
+              &--single
+                outline: none
+                border-radius: 0
+                height: 34px
+                .select2-selection
+                  &__rendered
+                    line-height: 34px
+                  &__arrow
+                    height: 34px
+              &--multiple
+                outline: none
+                border-radius: 0
+                min-height: 34px
+                .select2-selection
+                  &__rendered
+                    line-height: 22px
+                  &__choice
+                    background-color: #3c8dbc
+                    border: none
+                    border-radius: 4px
+                    color: #fff
+                    &__remove
+                      opacity: 0.8
+                      color: #fff
+                      margin-right: 2px
+                      &:hover
+                        opacity: 1
+            .select2-search--inline
+              .select2-search__field
+                margin-top: 7px
+            &--default.select2-container--focus .select2-selection--multiple
+              border: 1px solid #aaa !important
 
   &__close
     transition: opacity 0.36s ease
     position: absolute
-    top: 10px
+    top: 5px
     right: 10px
-    color: #222222
+    //color: #222222
     cursor: pointer
-    opacity: 0.4
+    opacity: 0.8
+    color: #fff
     &:hover
-      opacity: 0.8
+      opacity: 1
     .panelDodajPrzystanek__icon
       font-size: 1.8em !important
   &__icon
