--- a/szablon/blocks/panelList/_panelList.sass
+++ b/szablon/blocks/panelList/_panelList.sass
@@ -9,7 +9,7 @@
     +PHONE_ONLY
       margin-right: 0
   &__content
-    border: 1px solid #D2E3E9
+    border: 1px solid #f4f4f4
     //min-height: 200px
     height: 200px
     +TAB_MAX
@@ -18,6 +18,7 @@
     //max-height: 500px
     overflow-y: scroll
   &__item
+    border: 1px solid #f4f4f4
     width: 100%
     height: 40px
     line-height: 40px
@@ -25,10 +26,10 @@
     cursor: pointer
     &:nth-of-type(odd)
       //background-color: rgba(74, 174, 212, 0.1)
-      background-color: rgba(57, 73, 171, 0.1)
+      background-color: #f9f9f9
     &:hover
       //background-color: rgba(74, 174, 212, 0.5)
-      background-color: rgba(57, 73, 171, 0.5)
+      background-color: #ededed
       .panelList__navigation
         opacity: 1
   &__itemType
@@ -107,6 +108,72 @@
     font-weight: 700
     +PHONE_ONLY
       font-size: 9px
+  &__itemRanga
+    padding: 0 10px
+    height: 40px
+    line-height: 40px
+    flex-basis: 100px
+    //background: blue
+    text-align: center
+    font-size: 10px
+    color: #333
+    font-weight: 700
+  &__headeritemRanga
+    padding: 0 10px
+    height: 20px
+    line-height: 20px
+    flex-basis: 100px
+    //background: blue
+    text-align: center
+    font-size: 10px
+    color: #9C969C
+    font-weight: 700
+    +PHONE_ONLY
+      font-size: 9px
+  &__itemUlica
+    padding: 0 10px
+    height: 40px
+    line-height: 40px
+    flex-basis: 200px
+    //background: blue
+    text-align: center
+    font-size: 10px
+    color: #333
+    font-weight: 700
+  &__headeritemUlica
+    padding: 0 10px
+    height: 20px
+    line-height: 20px
+    flex-basis: 200px
+    //background: blue
+    text-align: center
+    font-size: 10px
+    color: #9C969C
+    font-weight: 700
+    +PHONE_ONLY
+      font-size: 9px
+  &__itemLinie
+    padding: 0 10px
+    height: 40px
+    line-height: 40px
+    flex-basis: 200px
+    //background: blue
+    text-align: center
+    font-size: 10px
+    color: #333
+    font-weight: 700
+  &__headeritemLinie
+    padding: 0 10px
+    height: 20px
+    line-height: 20px
+    flex-basis: 200px
+    //background: blue
+    text-align: center
+    font-size: 10px
+    color: #9C969C
+    font-weight: 700
+    +PHONE_ONLY
+      font-size: 9px
   &__itemBiletomat
     padding: 0 10px
     height: 40px
@@ -132,6 +199,33 @@
     font-weight: 700
     +PHONE_ONLY
       font-size: 9px
+
+  &__itemKiosk
+    padding: 0 10px
+    height: 40px
+    line-height: 40px
+    flex-basis: 100px
+    //background: red
+    font-size: 10px
+    color: #333
+    font-weight: 700
+    text-align: center
+    .fa
+      font-size: 2em !important
+      line-height: 40px
+  &__headeritemKiosk
+      padding: 0 10px
+      height: 20px
+      line-height: 20px
+      flex-basis: 100px
+      //background: red
+      text-align: center
+      font-size: 10px
+      color: #9C969C
+      font-weight: 700
+      +PHONE_ONLY
+        font-size: 9px
+
   &__navigation
     padding: 0 10px
     height: 40px
