--- a/szablon/blocks/panelLogin/_panelLogin.sass
+++ b/szablon/blocks/panelLogin/_panelLogin.sass
@@ -13,10 +13,8 @@
   opacity: 1
 
   margin: 0 auto
-  background-color: rgba(255, 255, 255, 0.95)
-  border: 1px solid rgba(255, 255, 255, 1)
-  border-radius: 5px
-  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.3)
+  background-color: #fff
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1)
 
   overflow: hidden
 
@@ -44,7 +42,7 @@
     letter-spacing: 2px
     text-align: center
     //text-transform: uppercase
-    color: rgba(57, 73, 171, 0.8)
+    color: #3c8dbc
   &__text
     font-family: Lato, sans-serif
     font-weight: 700
@@ -115,12 +113,12 @@
       border-left: 0
       border-right: 0
       //border-bottom: 2px solid #D2E3E9
-      border-bottom: 2px solid rgba(156, 150, 156, 0.25)
+      border-bottom: 2px solid #D2E3E9
       font-size: 16px
       &:focus
-        border-bottom: 2px solid rgba(57, 73, 171, 0.5)
+        border-bottom: 2px solid #98D3EA
       &:focus + i
-        color: rgba(57, 73, 171, 0.8)
+        color: #3c8dbc
 
 
     .remembermebox
@@ -164,10 +162,10 @@
       display: none
     .check:checked + label
       //color: #4AAED4
-      color: rgba(57, 73, 171, 1)
+      color: #3c8dbc
       .icon
         //background: #4AAED4
-        background: rgba(57, 73, 171, 0.8)
+        background: #3c8dbc
       .icon:before
         transform: scale(1) rotate(45deg)
       .icon:after
@@ -177,7 +175,7 @@
       //margin-top: 20px
       text-transform: uppercase
       //background: #4AAED4
-      background: rgba(57, 73, 171, 0.8)
+      background: #3c8dbc
       color: white
       border: none
       padding: 15px 20px
@@ -185,7 +183,7 @@
       max-width: 300px
       width: 100%
       &:hover
-        background: rgb(57, 73, 171)
+        background: #367fa9
 
   &__formwrapper
     position: relative
