--- a/szablon/blocks/panelRegister/_panelRegister.sass
+++ b/szablon/blocks/panelRegister/_panelRegister.sass
@@ -12,10 +12,8 @@
   z-index: 100
   opacity: 1
   margin: 0 auto
-  background-color: rgba(255, 255, 255, 0.95)
-  border: 1px solid rgba(255, 255, 255, 1)
-  border-radius: 5px
-  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.3)
+  background-color: #fff
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1)
   overflow: hidden
   transform: scale(1, 1)
 
@@ -41,7 +39,7 @@
     letter-spacing: 2px
     text-align: center
     //text-transform: uppercase
-    color: rgba(57, 73, 171, 0.8)
+    color: #3c8dbc
   &__text
     font-family: Lato, sans-serif
     font-weight: 700
@@ -111,13 +109,12 @@
       border-top: 0
       border-left: 0
       border-right: 0
-      //border-bottom: 2px solid #D2E3E9
-      border-bottom: 2px solid rgba(156, 150, 156, 0.25)
+      border-bottom: 2px solid #D2E3E9
       font-size: 16px
       &:focus
-        border-bottom: 2px solid rgba(57, 73, 171, 0.5)
+        border-bottom: 2px solid #98D3EA
       &:focus + i
-        color: rgba(57, 73, 171, 0.8)
+        color: #3c8dbc
 
 
 
@@ -125,7 +122,7 @@
       margin-top: 15px
       text-transform: uppercase
       //background: #4AAED4
-      background: rgba(57, 73, 171, 0.8)
+      background: #3c8dbc
       color: white
       border: none
       padding: 15px 20px
@@ -133,7 +130,7 @@
       max-width: 300px
       width: 100%
       &:hover
-        background: rgb(57, 73, 171)
+        background: #367fa9
 
   &__formwrapper
     position: relative
