--- a/szablon/blocks/panelWelcome/_panelWelcome.sass
+++ b/szablon/blocks/panelWelcome/_panelWelcome.sass
@@ -12,10 +12,8 @@
   z-index: 100
   opacity: 1
   margin: 0 auto
-  background-color: rgba(255, 255, 255, 0.95)
-  border: 1px solid rgba(255, 255, 255, 1)
-  border-radius: 5px
-  box-shadow: 0 0px 10px 0 rgba(0, 0, 0, 0.3)
+  background-color: #fff
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1)
 
   overflow: hidden
 
@@ -33,7 +31,7 @@
 
   &__wrapper
     position: relative
-    padding: 20px
+    padding: 60px 20px
   &__title
     font-family: Lato, sans-serif
     font-weight: 300
@@ -53,6 +51,7 @@
     letter-spacing: 1.25px
     text-align: center
     color: #999
+    text-transform: uppercase
   &__form
     padding: 5px
     margin: 0 auto
@@ -104,33 +103,27 @@
     text-align: center
     display: block
   &__navigation
-    &:before
-      width: 70%
-      height: 1px
-      content: ''
-      display: block
-      background-color: rgba(0, 0, 0, 0.2)
-      margin: 10px auto 20px
     display: flex
     flex-wrap: wrap
-    padding: 15px 0
-    border-bottom-left-radius: 10px
-    border-bottom-right-radius: 10px
     background: #fff
     align-content: space-between
     text-align: center
+    text-transform: uppercase
     a
-      flex-basis: 40%
+      flex-basis: 50%
       padding: 14px 20px
       border: 0
-      background: linear-gradient(to top, rgba(255, 255, 255, 0) 0%, rgba(250, 198, 100, 0.27) 100%), #2976df
-      border-radius: 25px
       color: #fff
-      font-size: 18px
+      //font-size: 18px
       letter-spacing: 1px
       transition: all .2s ease
       text-decoration: none
       margin: 0 auto
-      &:hover
-        box-shadow: 0 15px 40px 0 rgba(41, 118, 223, 0.5)
-        background: linear-gradient(to top, rgba(255, 255, 255, 0) 0%, rgba(250, 198, 100, 0.27) 100%), #2c8dff
+      &.green
+        background: #00a65a
+        &:hover
+          background: #008d4c
+      &.blue
+        background: #4F98C2
+        &:hover
+          background: #367fa9
