--- a/szablon/jade/_head.jade
+++ b/szablon/jade/_head.jade
@@ -27,4 +27,5 @@ head
     <!-- endbower -->
 
     link(rel="stylesheet", href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css")
+    link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.2/css/select2.min.css')
     link(rel='stylesheet', href='css/main.css')
