--- a/szablon/jade/_panelPrzystanki.jade
+++ b/szablon/jade/_panelPrzystanki.jade
@@ -1,125 +1,137 @@
 .panelPrzystanki.panel.-hidden.dragger
+  .panelPrzystanki__title Panel Zarządzania Przystankami
   .panelPrzystanki__wrapper
-    .panelPrzystanki__title Panel Zarządzania Przystankami
-    .panelPrzystanki__subtitle Zarządzanie przystankami w systemie.
-    .panelPrzystanki__navigation
-      a(href="#").panelPrzystanki__navigation__item#panel-DodajPrzystanekButton Dodaj Przystanek
     .panelPrzystanki__content
       .panelPrzystanki__content__Title Lista Przystanków
       .panelPrzystanki__content__Filtr
         .panelPrzystanki__content__Filtr__item
-          input(placeholder="Szukaj autobusu...")
+          input(placeholder="Szukaj przystanku")
         .panelPrzystanki__content__Filtr__item
-          input(placeholder="Filtr stanów autobusu")
+          input(placeholder="Szukaj ulicy")
         .panelPrzystanki__content__Filtr__item
-          input(placeholder="Typ autobusu")
-        .panelPrzystanki__content__Filtr__item
-          input(placeholder="Biletomat")
+          select(multiple).js-example-placeholder-multiple.linie
+
+            option
+            - for (var i=1;i<20;i++)
+              option=i
+
+          //input(placeholder="Typ autobusu")
+        .panelPrzystanki__content__Filtr__item.check
+          input(type="checkbox")#czyprzystanekmabiletomat
+          label(for="czyprzystanekmabiletomat")
+          p Biletomat
+        .panelPrzystanki__content__Filtr__item.check
+          input(type="checkbox")#czyprzystanekmakiosk
+          label(for="czyprzystanekmakiosk")
+          p Kiosk
       .panelPrzystanki__contentList
 
         .panelList
           .panelList__header
-            .panelList__headeritemType Typ
-            .panelList__headeritemName Numer Autobusu
-            .panelList__headeritemStatus Status
+            .panelList__headeritemName Nazwa przystanku
+            .panelList__headeritemUlica Ulica
+            .panelList__headeritemLinie Linie
             .panelList__headeritemBiletomat Biletomat
+            .panelList__headeritemKiosk Kiosk
             .panelList__headeritemnavigation Szczegóły
           .panelPrzystanki__list.panelList__content
             .panelList__item
-              .panelList__itemType
-                .fa.fa-bus
-              .panelList__itemName 102
-              .panelList__itemStatus Aktywny
+
+              .panelList__itemName Lubelska
+              .panelList__itemUlica Poprzeczna
+              .panelList__itemLinie 1,2,3
               .panelList__itemBiletomat
+                .fa.fa-times-circle-o
+              .panelList__itemKiosk
                 .fa.fa-times-circle-o
               .panelList__navigation Zobacz
             .panelList__item
-              .panelList__itemType
-                .fa.fa-bus
-              .panelList__itemName 103
-              .panelList__itemStatus Aktywny
+
+              .panelList__itemName Dworzec Główny
+              .panelList__itemUlica Dworcowa
+              .panelList__itemLinie 1,2,3
               .panelList__itemBiletomat
+                .fa.fa-times-circle-o
+              .panelList__itemKiosk
                 .fa.fa-times-circle-o
               .panelList__navigation Zobacz
             .panelList__item
-              .panelList__itemType
-                .fa.fa-bus
-              .panelList__itemName 5
-              .panelList__itemStatus Aktywny
+
+              .panelList__itemName Uniwersytet Stadion
+              .panelList__itemUlica Warszawska
+              .panelList__itemLinie 1,2,3
               .panelList__itemBiletomat
+                .fa.fa-times-circle-o
+              .panelList__itemKiosk
                 .fa.fa-times-circle-o
               .panelList__navigation Zobacz
             .panelList__item
-              .panelList__itemType
-                .fa.fa-bus
-              .panelList__itemName 6
-              .panelList__itemStatus Aktywny
+
+              .panelList__itemName Uniwersytet Świetlista
+              .panelList__itemUlica Słoneczna
+              .panelList__itemLinie 1,2,3
               .panelList__itemBiletomat
+                .fa.fa-times-circle-o
+              .panelList__itemKiosk
                 .fa.fa-times-circle-o
               .panelList__navigation Zobacz
             .panelList__item
-              .panelList__itemType
-                .fa.fa-bus
-              .panelList__itemName 7
-              .panelList__itemStatus Aktywny
+
+              .panelList__itemName Partyzantów
+              .panelList__itemUlica Partyzantów
+              .panelList__itemLinie 1,2,3
               .panelList__itemBiletomat
+                .fa.fa-times-circle-o
+              .panelList__itemKiosk
                 .fa.fa-times-circle-o
               .panelList__navigation Zobacz
             .panelList__item
-              .panelList__itemType
-                .fa.fa-bus
-              .panelList__itemName 8
-              .panelList__itemStatus Aktywny
+
+              .panelList__itemName Uniwersytet-Prawocheńskiego
+              .panelList__itemUlica Warszawska
+              .panelList__itemLinie 1,2,3
               .panelList__itemBiletomat
                 .fa.fa-times-circle-o
-              .panelList__navigation Zobacz
-            .panelList__item
-              .panelList__itemType
-                .fa.fa-bus
-              .panelList__itemName 9
-              .panelList__itemStatus Aktywny
-              .panelList__itemBiletomat
+              .panelList__itemKiosk
                 .fa.fa-times-circle-o
               .panelList__navigation Zobacz
-            .panelList__item
-              .panelList__itemType
-                .fa.fa-bus
-              .panelList__itemName 10
-              .panelList__itemStatus Aktywny
-              .panelList__itemBiletomat
-                .fa.fa-times-circle-o
-              .panelList__navigation Zobacz
-            .panelList__item
-              .panelList__itemType
-                .fa.fa-bus
-              .panelList__itemName 11
-              .panelList__itemStatus Aktywny
-              .panelList__itemBiletomat
-                .fa.fa-times-circle-o
-              .panelList__navigation Zobacz
-    span.panelPrzystanki__close
-      span.panelPrzystanki__icon.fa.fa-times
+
+    .panelPrzystanki__navigation
+      a(href="#").panelPrzystanki__navigation__item#panel-DodajPrzystanekButton Dodaj Przystanek
+  span.panelPrzystanki__close
+    span.panelPrzystanki__icon.fa.fa-times
 
 .panelDodajPrzystanek__dragger
   .panelDodajPrzystanek.panel.-hidden.dragger
+    .panelDodajPrzystanek__title Dodaj Przystanek
     .panelDodajPrzystanek__wrapper
-      .panelDodajPrzystanek__title Dodaj Przystanek
-      .panelDodajPrzystanek__subtitle Panel dodawania nowych przystanków.
       .panelDodajPrzystanek__content
         .panelDodajPrzystanek__content__Title Dane Przystanku
-        .panelDodajPrzystanek__content__Filtr
-          .panelDodajPrzystanek__content__Filtr__item
-            input(placeholder="Nazwa przystanku")
-          .panelDodajPrzystanek__content__Filtr__item
-            input(placeholder="Lokalizacja")
-          .panelDodajPrzystanek__content__Filtr__item
-            input(placeholder="Biletomat")
-          .panelDodajPrzystanek__content__Filtr__item
-            input(placeholder="Kiosk")
-          .panelDodajPrzystanek__content__Filtr__item
-            input(placeholder="Typ przystanku")
+        .panelDodajPrzystanek__content__form
+          .panelDodajPrzystanek__content__form__item
+            span.item Nazwa przystanku
+            input(placeholder="Podaj nazwę przystanku")
+          .panelDodajPrzystanek__content__form__item
+            span.item Lokalizacja
+            input(placeholder="Podaj lokalizackje")
+          .panelDodajPrzystanek__content__form__item
+            span.item Czy ma biletomat?
+            select.js-example-placeholder-single.crud
+              option(value=0) Nie
+              option(value=1) Tak
+          .panelDodajPrzystanek__content__form__item
+            span.item Czy ma kiosk?
+            select.js-example-placeholder-single.crud
+              option(value=0) Nie
+              option(value=1) Tak
+          .panelDodajPrzystanek__content__form__item
+            span.item Linie
+            select(multiple).js-example-placeholder-multiple.linie
+              option
+              - for (var i=1;i<20;i++)
+                option=i
       .panelDodajPrzystanek__navigation
-        button.panelDodajPrzystanek__navigation__item Dodaj Autobus
-        a(href="#").panelDodajPrzystanek__navigation__item.-abort Anuluj
-      span.panelDodajPrzystanek__close
+        button.panelDodajPrzystanek__navigation__item.green Dodaj Autobus
+        a(href="#").panelDodajPrzystanek__navigation__item.gray.-abort Anuluj
+    span.panelDodajPrzystanek__close
         span.panelDodajPrzystanek__icon.fa.fa-times
