--- a/szablon/jade/_panelUsers.jade
+++ b/szablon/jade/_panelUsers.jade
@@ -1,117 +1,78 @@
 .panelUsers.panel.-hidden.dragger
+  .panelUsers__title Panel Zarządzania Użytkownikami
   .panelUsers__wrapper
-    .panelUsers__title Panel Zarządzania Użytkownikami
-    .panelUsers__subtitle Zarządzanie użytkownikami systemu.
-    .panelUsers__navigation
-      a(href="#").panelUsers__navigation__item#panel-DodajUsersButton Dodaj Użytkownika
     .panelUsers__content
       .panelUsers__content__Title Lista Użytkowników
       .panelUsers__content__Filtr
         .panelUsers__content__Filtr__item
           input(placeholder="Szukaj użytkownika...")
+        .panelUsers__content__Filtr__item
+          select.js-example-placeholder-single.status
+            option
+            option(value=0) Nieaktywny
+            option(value=1) Aktywny
+        .panelUsers__content__Filtr__item
+          select.js-example-placeholder-single.ranga
+            option
+            option(value=0) Użytkownik
+            option(value=1) Kontroler
+            option(value=1) Administrator
       .panelUsers__contentList
 
         .panelList
           .panelList__header
-            .panelList__headeritemType Typ
             .panelList__headeritemName Email
-            .panelList__headeritemStatus Ranga
-            .panelList__headeritemBiletomat Status
+            .panelList__headeritemRanga Ranga
+            .panelList__headeritemStatus Status
             .panelList__headeritemnavigation Szczegóły
           .panelUsers__list.panelList__content
             .panelList__item
-              .panelList__itemType
-                .fa.fa-bus
-              .panelList__itemName 102
+              .panelList__itemName kontroler@dev.com
+              .panelList__itemRanga Kontroler
               .panelList__itemStatus Aktywny
-              .panelList__itemBiletomat
-                .fa.fa-times-circle-o
               .panelList__navigation Zobacz
             .panelList__item
-              .panelList__itemType
-                .fa.fa-bus
-              .panelList__itemName 103
-              .panelList__itemStatus Aktywny
-              .panelList__itemBiletomat
-                .fa.fa-times-circle-o
+              .panelList__itemName bolek@dev.com
+              .panelList__itemRanga Uzytkownik
+              .panelList__itemStatus nieaktywny
               .panelList__navigation Zobacz
             .panelList__item
-              .panelList__itemType
-                .fa.fa-bus
-              .panelList__itemName 5
+              .panelList__itemName admin@dev.com
+              .panelList__itemRanga Administrator
               .panelList__itemStatus Aktywny
-              .panelList__itemBiletomat
-                .fa.fa-times-circle-o
               .panelList__navigation Zobacz
-            .panelList__item
-              .panelList__itemType
-                .fa.fa-bus
-              .panelList__itemName 6
-              .panelList__itemStatus Aktywny
-              .panelList__itemBiletomat
-                .fa.fa-times-circle-o
-              .panelList__navigation Zobacz
-            .panelList__item
-              .panelList__itemType
-                .fa.fa-bus
-              .panelList__itemName 7
-              .panelList__itemStatus Aktywny
-              .panelList__itemBiletomat
-                .fa.fa-times-circle-o
-              .panelList__navigation Zobacz
-            .panelList__item
-              .panelList__itemType
-                .fa.fa-bus
-              .panelList__itemName 8
-              .panelList__itemStatus Aktywny
-              .panelList__itemBiletomat
-                .fa.fa-times-circle-o
-              .panelList__navigation Zobacz
-            .panelList__item
-              .panelList__itemType
-                .fa.fa-bus
-              .panelList__itemName 9
-              .panelList__itemStatus Aktywny
-              .panelList__itemBiletomat
-                .fa.fa-times-circle-o
-              .panelList__navigation Zobacz
-            .panelList__item
-              .panelList__itemType
-                .fa.fa-bus
-              .panelList__itemName 10
-              .panelList__itemStatus Aktywny
-              .panelList__itemBiletomat
-                .fa.fa-times-circle-o
-              .panelList__navigation Zobacz
-            .panelList__item
-              .panelList__itemType
-                .fa.fa-bus
-              .panelList__itemName 11
-              .panelList__itemStatus Aktywny
-              .panelList__itemBiletomat
-                .fa.fa-times-circle-o
-              .panelList__navigation Zobacz
-    span.panelUsers__close
-      span.panelUsers__icon.fa.fa-times
+
+    .panelUsers__navigation
+      a(href="#").panelUsers__navigation__item#panel-DodajUsersButton Dodaj Użytkownika
+  span.panelUsers__close
+    span.panelUsers__icon.fa.fa-times
 
 .panelDodajUsers__dragger
   .panelDodajUsers.panel.-hidden.dragger
+    .panelDodajUsers__title Dodaj Użytkownika
     .panelDodajUsers__wrapper
-      .panelDodajUsers__title Dodaj Użytkownika
-      .panelDodajUsers__subtitle Panel dodawania nowych autobusów.
       .panelDodajUsers__content
-        .panelDodajUsers__content__Title Dane Autobusu
-        .panelDodajUsers__content__Filtr
-          .panelDodajUsers__content__Filtr__item
-            input(placeholder="Numer Rejestracyjny")
-          .panelDodajUsers__content__Filtr__item
-            input(placeholder="Numer VIN")
-          .panelDodajUsers__content__Filtr__item
-            input(placeholder="Typ autobusu")
-          .panelDodajUsers__content__Filtr__item
-            input(placeholder="Biletomat")
+        .panelDodajUsers__content__Title Dane Użytkownika
+        .panelDodajUsers__content__form
+          .panelDodajUsers__content__form__item
+            span.item E-mail
+            input(placeholder="Podaj adres e-mail")
+          .panelDodajUsers__content__form__item
+            span.item Hasło
+            input(type='password' placeholder="Podaj hasło")
+          .panelDodajUsers__content__form__item
+            span.item Ranga
+            select.js-example-placeholder-single.crud
+              option(value=0) Użytkownik
+              option(value=1) Kontroler
+              option(value=1) Administrator
+          .panelDodajUsers__content__form__item
+            span.item Status
+            select.js-example-placeholder-single.crud
+              option(value=0) Nieaktywny
+              option(value=1) Aktywny
       .panelDodajUsers__navigation
-        button.panelDodajUsers__navigation__item Dodaj Użytkownika
+        button.panelDodajUsers__navigation__item.green Dodaj Użytkownika
         a(href="#").panelDodajUsers__navigation__item.-abort Anuluj
-      span.panelDodajUsers__close
-        span.panelDodajUsers__icon.fa.fa-times
+    span.panelDodajUsers__close
+      span.panelDodajUsers_icon.fa.fa-times
