--- a/app/blocks/_grid.sass
+++ b/app/blocks/_grid.sass
@@ -77,3 +77,19 @@ footer
   background-position: center
   background-size: cover
   background-image: url("../img/footer.png")
+
+.flash__info
+  background: #3949ab
+  position: absolute
+  z-index: 999
+  margin: 0 auto
+  text-align: center
+  display: inline-block
+  left: 50px
+  height: 40px
+  top: 5px
+  color: white
+  padding: 0 10px
+  line-height: 40px
+  opacity: 0.9
+  border-radius: 6px
