--- a/app/blocks/header/_header.sass
+++ b/app/blocks/header/_header.sass
@@ -3,16 +3,17 @@
   height: 40px
   width: 100%
   z-index: 100
-  background: rgba(60,141,188,0.9)
+  //background: rgba(60,141,188,0.9)
   position: absolute
 
 .header
   &__corner
+    border-radius: 6px
     position: absolute
     width: 40px
     height: 40px
-    top: 0
-    right: 40px
+    top: 5px
+    left: 5px
     //left: 0
     z-index: 103
     margin: 0 auto
@@ -20,6 +21,9 @@
     //background-size: 100% 100%
     opacity: 0.9
     cursor: pointer
+    background: #3949ab
+    text-align: center
+    line-height: 40px
     &:hover
       transition: opacity 0.36s ease
       opacity: 1
@@ -28,10 +32,9 @@
       left: 0
       right: 100%
     i
-      font-size: 20px
-      padding: 10px
+      font-size: 1.5em
       color: #fff
-
+      vertical-align: sub
 
   &__switcher
     transition: transform 0.36s ease, background 0.8s ease
@@ -63,6 +66,9 @@
     font-size: 10px
     font-weight: 300
   &__item
+    a
+      color: white
+      text-decoration: none
     list-style-type: none
     text-align: center
     display: inline-block
@@ -92,14 +98,16 @@
     position: absolute
     width: 40px
     height: 40px
-    top: 0
-    right: 1px
+    top: 5px
+    right: 5px
     z-index: 103
     margin: 0 auto
     //background-image: url(../blocks/header/src/headerGear.png)
     //background-size: 100% 100%
     opacity: 0.9
     cursor: pointer
+    background: #3949ab
+    border-radius: 6px
     &:hover
       transition: opacity 0.36s ease
       opacity: 1
@@ -146,6 +154,9 @@
     line-height: 2
     color: white
     cursor: pointer
+    a
+      color: white
+      text-decoration: none
     &:hover
       .headerProfile__buttonIconBG
         background: #495aff
@@ -198,17 +209,31 @@
     span
       font-size: 9px
 .headerLogo
-  width: 120px
-  height: 40px
+  border-bottom-right-radius: 20px
+  border-bottom-left-radius: 20px
+  width: 140px
+  height: 20px
   position: absolute
   z-index: 101
   color: #fff
-  padding: 8px 20px
+  display: inline-block
+  margin: 0 auto
+  text-align: center
+  left: 0
+  right: 0
+  background: #3949ab
+  opacity: 0.9
   i
     font-size: 25px
-  span
-    margin-left: 7px
-    font-size: 19px
-    position: absolute
+
   +PHONE_ONLY
     display: none
+.headerUserPanel
+  background: #3949ab
+  opacity: 0.9
+  border-radius: 6px
+  top: 5px
+  display: inline-block
+  text-align: left
+  padding: 0 10px
+  right: 50px
