--- a/app/css/main.css
+++ b/app/css/main.css
@@ -3147,6 +3147,23 @@ footer {
   background-image: url("../img/footer.png");
 }
 
+.flash__info {
+  background: #3949ab;
+  position: absolute;
+  z-index: 999;
+  margin: 0 auto;
+  text-align: center;
+  display: inline-block;
+  left: 50px;
+  height: 40px;
+  top: 5px;
+  color: white;
+  padding: 0 10px;
+  line-height: 40px;
+  opacity: 0.9;
+  border-radius: 6px;
+}
+
 /* WEBSITE FONTS/STYLIST
  *========================================================================== */
 body {
@@ -5535,20 +5552,23 @@ a.tabnav-extra:hover {
   height: 40px;
   width: 100%;
   z-index: 100;
-  background: rgba(60, 141, 188, 0.9);
   position: absolute;
 }
 
 .header__corner {
+  border-radius: 6px;
   position: absolute;
   width: 40px;
   height: 40px;
-  top: 0;
-  right: 40px;
+  top: 5px;
+  left: 5px;
   z-index: 103;
   margin: 0 auto;
   opacity: 0.9;
   cursor: pointer;
+  background: #3949ab;
+  text-align: center;
+  line-height: 40px;
 }
 
 .header__corner:hover {
@@ -5565,9 +5585,9 @@ a.tabnav-extra:hover {
 }
 
 .header__corner i {
-  font-size: 20px;
-  padding: 10px;
+  font-size: 1.5em;
   color: #fff;
+  vertical-align: sub;
 }
 
 .header__switcher {
@@ -5625,6 +5645,11 @@ a.tabnav-extra:hover {
   cursor: pointer;
 }
 
+.header__item a {
+  color: white;
+  text-decoration: none;
+}
+
 .header__item:hover .header__buttonIconBG {
   background: #495aff;
   -webkit-transform: scale(1);
@@ -5655,12 +5680,14 @@ a.tabnav-extra:hover {
   position: absolute;
   width: 40px;
   height: 40px;
-  top: 0;
-  right: 1px;
+  top: 5px;
+  right: 5px;
   z-index: 103;
   margin: 0 auto;
   opacity: 0.9;
   cursor: pointer;
+  background: #3949ab;
+  border-radius: 6px;
 }
 
 .headerProfile__corner:hover {
@@ -5728,6 +5755,11 @@ a.tabnav-extra:hover {
   line-height: 2;
   color: white;
   cursor: pointer;
+}
+
+.headerProfile__item a {
+  color: white;
+  text-decoration: none;
 }
 
 .headerProfile__item:hover .headerProfile__buttonIconBG {
@@ -5803,28 +5835,41 @@ a.tabnav-extra:hover {
 }
 
 .headerLogo {
-  width: 120px;
-  height: 40px;
+  border-bottom-right-radius: 20px;
+  border-bottom-left-radius: 20px;
+  width: 140px;
+  height: 20px;
   position: absolute;
   z-index: 101;
   color: #fff;
-  padding: 8px 20px;
+  display: inline-block;
+  margin: 0 auto;
+  text-align: center;
+  left: 0;
+  right: 0;
+  background: #3949ab;
+  opacity: 0.9;
 }
 
 .headerLogo i {
   font-size: 25px;
 }
 
-.headerLogo span {
-  margin-left: 7px;
-  font-size: 19px;
-  position: absolute;
-}
-
 @media (max-width: 767px) {
   .headerLogo {
     display: none;
   }
+}
+
+.headerUserPanel {
+  background: #3949ab;
+  opacity: 0.9;
+  border-radius: 6px;
+  top: 5px;
+  display: inline-block;
+  text-align: left;
+  padding: 0 10px;
+  right: 50px;
 }
 
 #containerDrag {
@@ -6442,6 +6487,7 @@ a.tabnav-extra:hover {
 }
 
 .panelRegister__form button {
+  cursor: pointer;
   margin-top: 15px;
   text-transform: uppercase;
   background: #3c8dbc;
