--- a/app/jade/panelAutobusy.jade
+++ b/app/jade/panelAutobusy.jade
@@ -1,4 +1,4 @@
-.panelAutobusy.panel.-hidden.dragger
+.panelAutobusy.panel.dragger
   .panelAutobusy__title Panel Zarządzania Autobusami
   .panelAutobusy__wrapper
     .panelAutobusy__content
@@ -44,8 +44,9 @@
               .panelList__navigation Zobacz
     .panelAutobusy__navigation
       a(href="#").panelAutobusy__navigation__item#panel-DodajautobusyButton Dodaj Autobus
-  span.panelAutobusy__close
-    span.panelAutobusy__icon.fa.fa-times
+  a(href="#")
+    span.panelAutobusy__close
+      span.panelAutobusy__icon.fa.fa-times
 
 .panelDodajAutobus__dragger
   .panelDodajAutobus.panel.-hidden.dragger
