--- a/app/jade/panelLogin.jade
+++ b/app/jade/panelLogin.jade
@@ -38,3 +38,5 @@
         span.panelLogin__icon.fa.fa-times
     .panelLogin__navigation Nie masz konta?
       a(href="#/register").panelLogin__ToRegister Zarejestruj się.
+    .panelLogin__navigation Nie pamiętasz hasła?
+      a(href="#/forgot").panelLogin__ToRegister Odzyskaj konto.
