--- a/app/jade/panelPrzystanki.jade
+++ b/app/jade/panelPrzystanki.jade
@@ -1,4 +1,4 @@
-.panelPrzystanki.panel.-hidden.dragger
+.panelPrzystanki.panel.dragger
   .panelPrzystanki__title Panel Zarządzania Przystankami
   .panelPrzystanki__wrapper
     .panelPrzystanki__content
@@ -98,8 +98,9 @@
 
     .panelPrzystanki__navigation
       a(href="#").panelPrzystanki__navigation__item#panel-DodajPrzystanekButton Dodaj Przystanek
-  span.panelPrzystanki__close
-    span.panelPrzystanki__icon.fa.fa-times
+  a(href="#")
+    span.panelPrzystanki__close
+      span.panelPrzystanki__icon.fa.fa-times
 
 .panelDodajPrzystanek__dragger
   .panelDodajPrzystanek.panel.-hidden.dragger
