--- a/app/jade/panelResetPassword.jade
+++ b/app/jade/panelResetPassword.jade
@@ -1,4 +1,4 @@
-.panelResetPassword.panel.-hidden
+.panelResetPassword.panel
   .panelResetPassword__wrapper
     .panelResetPassword__title Panel Odzyskiwania Hasła
     .panelResetPassword__alert.-info.-hidden
@@ -36,7 +36,8 @@
         input(name="user_password_again_new" type="password" placeholder="Powtórz hasło")
         i.fa.fa-lock
       button(type="submit") Zatwierdz nowe hasło
-    span.panelResetPassword__close
-      span.panelResetPassword__icon.fa.fa-times
+    a(href="#")
+      span.panelResetPassword__close
+        span.panelResetPassword__icon.fa.fa-times
     .panelResetPassword__navigation Nie masz konta?
-      a(href="#").panelResetPassword__ToRegister Zarejestruj się.
+      a(href="#/register").panelResetPassword__ToRegister Zarejestruj się.
