--- a/app/jade/panelUsers.jade
+++ b/app/jade/panelUsers.jade
@@ -1,4 +1,4 @@
-.panelUsers.panel.-hidden.dragger
+.panelUsers.panel.dragger
   .panelUsers__title Panel Zarządzania Użytkownikami
   .panelUsers__wrapper
     .panelUsers__content
@@ -44,8 +44,9 @@
 
     .panelUsers__navigation
       a(href="#").panelUsers__navigation__item#panel-DodajUsersButton Dodaj Użytkownika
-  span.panelUsers__close
-    span.panelUsers__icon.fa.fa-times
+  a(href="#")
+    span.panelUsers__close
+      span.panelUsers__icon.fa.fa-times
 
 .panelDodajUsers__dragger
   .panelDodajUsers.panel.-hidden.dragger
