--- a/app/jade/_header.jade
+++ b/app/jade/_header.jade
@@ -8,25 +8,28 @@
     .background
     ul.header__panel
       li.header__item#panel-autobusyButton
-        span.header__button
-          span.header__buttonIconBG
-            .header__buttonIcon.fa.fa-bus
-          | Autobusy
+        a(href="#/bus" )
+          span.header__button
+            span.header__buttonIconBG
+              .header__buttonIcon.fa.fa-bus
+            | Autobusy
       li.header__item#panel-przystankiButton
-        span.header__button
-          span.header__buttonIconBG
-            .header__buttonIcon.fa.fa-map-signs
-          | Przystanki
+        a(href="#/busstop" )
+          span.header__button
+            span.header__buttonIconBG
+              .header__buttonIcon.fa.fa-map-signs
+            | Przystanki
       li.header__item#panel-trasyButton
         span.header__button
           span.header__buttonIconBG
             .header__buttonIcon.fa.fa-road
           | Trasy
       li.header__item#panel-uzytkownicyButton
-        span.header__button
-          span.header__buttonIconBG
-            .header__buttonIcon.fa.fa-users
-          | Użytkownicy
+        a(href="#/users" )
+          span.header__button
+            span.header__buttonIconBG
+              .header__buttonIcon.fa.fa-users
+            | Użytkownicy
       li.header__item#panel-kontroleButton
         span.header__button
           span.header__buttonIconBG
@@ -41,22 +44,23 @@
     .background
     ul.headerProfile__panel
       li.headerProfile__item#panel-loginButton
-        a(href="#/login")
+        a(href="#/login" )
           span.headerProfile__button
             span.headerProfile__buttonIconBG
               .headerProfile__buttonIcon.fa.fa-power-off
             | Logowanie
       li.headerProfile__item#panel-registerButton
-        a(href="#/register")
+        a(href="#/register" )
           span.headerProfile__button
             span.headerProfile__buttonIconBG
               .headerProfile__buttonIcon.fa.fa-sign-in
             | Rejestracja
       li.headerProfile__item#panel-odzyskajKontoButton
-        span.headerProfile__button
-          span.headerProfile__buttonIconBG
-            .headerProfile__buttonIcon.fa.fa-key
-          | Odzyskaj konto
+        a(href="#/forgot" )
+          span.headerProfile__button
+            span.headerProfile__buttonIconBG
+              .headerProfile__buttonIcon.fa.fa-key
+            | Odzyskaj konto
       li.headerProfile__item#panel-mojeKontoButton
         span.headerProfile__button
           span.headerProfile__buttonIconBG
@@ -73,6 +77,3 @@
             span.headerProfile__buttonIconBG
               .headerProfile__buttonIcon.fa.fa-sign-out
             | Wyloguj
-
-.headerUserPanel
-  span Zalogowany: {{vm.user.username}}
