--- a/szablon/blocks/main.sass
+++ b/szablon/blocks/main.sass
@@ -51,3 +51,4 @@ $fa-font-path: "../blocks/vendor/font-awesome/fonts"
 @import "panelDodajPrzystanek/panelDodajPrzystanek"
 @import "panelUsers/panelUsers"
 @import "panelDodajUsers/panelDodajUsers"
+@import "panelWyswietlAutobus/panelWyswietlAutobus"
