--- a/szablon/jade/_panelPrzystanki.jade
+++ b/szablon/jade/_panelPrzystanki.jade
@@ -30,66 +30,13 @@
           .panelList__header
             .panelList__headeritemName Nazwa przystanku
             .panelList__headeritemUlica Ulica
-            .panelList__headeritemLinie Linie
             .panelList__headeritemBiletomat Biletomat
             .panelList__headeritemKiosk Kiosk
             .panelList__headeritemnavigation Szczegóły
-          .panelPrzystanki__list.panelList__content
+          .panelPrzystanki__list.panelList__content#GetBusstopList
             .panelList__item
-
-              .panelList__itemName Lubelska
-              .panelList__itemUlica Poprzeczna
-              .panelList__itemLinie 1,2,3
-              .panelList__itemBiletomat
-                .fa.fa-times-circle-o
-              .panelList__itemKiosk
-                .fa.fa-times-circle-o
-              .panelList__navigation Zobacz
-            .panelList__item
-
-              .panelList__itemName Dworzec Główny
-              .panelList__itemUlica Dworcowa
-              .panelList__itemLinie 1,2,3
-              .panelList__itemBiletomat
-                .fa.fa-times-circle-o
-              .panelList__itemKiosk
-                .fa.fa-times-circle-o
-              .panelList__navigation Zobacz
-            .panelList__item
-
-              .panelList__itemName Uniwersytet Stadion
-              .panelList__itemUlica Warszawska
-              .panelList__itemLinie 1,2,3
-              .panelList__itemBiletomat
-                .fa.fa-times-circle-o
-              .panelList__itemKiosk
-                .fa.fa-times-circle-o
-              .panelList__navigation Zobacz
-            .panelList__item
-
-              .panelList__itemName Uniwersytet Świetlista
-              .panelList__itemUlica Słoneczna
-              .panelList__itemLinie 1,2,3
-              .panelList__itemBiletomat
-                .fa.fa-times-circle-o
-              .panelList__itemKiosk
-                .fa.fa-times-circle-o
-              .panelList__navigation Zobacz
-            .panelList__item
-
-              .panelList__itemName Partyzantów
-              .panelList__itemUlica Partyzantów
-              .panelList__itemLinie 1,2,3
-              .panelList__itemBiletomat
-                .fa.fa-times-circle-o
-              .panelList__itemKiosk
-                .fa.fa-times-circle-o
-              .panelList__navigation Zobacz
-            .panelList__item
-
-              .panelList__itemName Uniwersytet-Prawocheńskiego
-              .panelList__itemUlica Warszawska
-              .panelList__itemLinie 1,2,3
+              .panelList__itemName Przykładowa
+              .panelList__itemUlica Przykładowa
               .panelList__itemBiletomat
                 .fa.fa-times-circle-o
               .panelList__itemKiosk
