--- a/szablon/jade/_panelUsers.jade
+++ b/szablon/jade/_panelUsers.jade
@@ -25,20 +25,10 @@
             .panelList__headeritemRanga Ranga
             .panelList__headeritemStatus Status
             .panelList__headeritemnavigation Szczegóły
-          .panelUsers__list.panelList__content
+          .panelUsers__list.panelList__content#GetUserList
             .panelList__item
-              .panelList__itemName kontroler@dev.com
+              .panelList__itemName Przykładowy@dev.com
               .panelList__itemRanga Kontroler
-              .panelList__itemStatus Aktywny
-              .panelList__navigation Zobacz
-            .panelList__item
-              .panelList__itemName bolek@dev.com
-              .panelList__itemRanga Uzytkownik
-              .panelList__itemStatus nieaktywny
-              .panelList__navigation Zobacz
-            .panelList__item
-              .panelList__itemName admin@dev.com
-              .panelList__itemRanga Administrator
               .panelList__itemStatus Aktywny
               .panelList__navigation Zobacz
 
