Przygotowanie pod angulara

--- a/app/blocks/main.sass
+++ b/app/blocks/main.sass
@@ -38,6 +38,7 @@ $fa-font-path: "../blocks/vendor/font-awesome/fonts"
 @import "header/header"
 
 @import "drag/dragger"
+@import "panel/panel"
 
 @import "panelWelcome/panelWelcome"
 @import "panelLogin/panelLogin"
@@ -51,3 +52,5 @@ $fa-font-path: "../blocks/vendor/font-awesome/fonts"
 @import "panelDodajPrzystanek/panelDodajPrzystanek"
 @import "panelUsers/panelUsers"
 @import "panelDodajUsers/panelDodajUsers"
+@import "panelWyswietlAutobus/panelWyswietlAutobus"
+@import "panelWyswietlPrzystanek/panelWyswietlPrzystanek"
