--- a/app/blocks/panelRegister/_panelRegister.sass
+++ b/app/blocks/panelRegister/_panelRegister.sass
@@ -1,21 +1,7 @@
 @charset "UTF-8"
 
 .panelRegister
-  transition: transform 0.36s ease
-  position: absolute
-  max-width: 530px
-  width: 100%
-  height: auto
-  top: calc(50% - 187.5px)
-  right: 0
-  left: 0
-  z-index: 100
-  opacity: 1
-  margin: 0 auto
-  background-color: #fff
-  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1)
-  overflow: hidden
-  transform: scale(1, 1)
+  min-width: 560px
 
   &.-hidden
     opacity: 0
