--- a/app/blocks/panelAutobusy/_panelAutobusy.sass
+++ b/app/blocks/panelAutobusy/_panelAutobusy.sass
@@ -1,20 +1,7 @@
 @charset "UTF-8"
 .panelAutobusy
-  transition: transform 0.36s ease
-  position: absolute
-  max-width: 960px
-  width: 100%
-  height: auto
-  top: 0
-  right: 0
-  left: 0
-  z-index: 100
-  opacity: 1
-  margin: 55px 20px 20px 20px
-  background-color: #fff
-  box-shadow: 0 1px 1px rgba(0,0,0,0.1)
-  overflow: hidden
-  transform: scale(1, 1)
+  min-width: 960px
+
   +TAB_MAX
     position: relative !important
     width: 100% !important
