--- a/app/blocks/panelDodajAutobus/_panelDodajAutobus.sass
+++ b/app/blocks/panelDodajAutobus/_panelDodajAutobus.sass
@@ -1,28 +1,7 @@
 @charset "UTF-8"
-.panelDodajAutobus__dragger
-  position: absolute
-  top: 0
-  margin: 0 auto
-  left: 0
-  right: 0
 .panelDodajAutobus
-  transition: transform 0.36s ease
-  position: absolute
-  max-width: 700px
-  width: 100%
-  height: auto
-  top: 0
-  right: 0
-  left: 0
-  z-index: 100
-  opacity: 1
-  margin: 55px 20px 20px 20px
-  background-color: rgba(255, 255, 255,1)
-  //border: 1px solid rgba(255, 255, 255, 1)
-  //border-radius: 5px
-  box-shadow: 0 1px 1px rgba(0,0,0,0.1)
-  overflow: hidden
-  transform: scale(1, 1)
+  min-width: 700px
+
   +TAB_MAX
     position: relative !important
     width: 100% !important
