--- a/app/blocks/panelWyswietlPrzystanek/_panelWyswietlPrzystanek.sass
+++ b/app/blocks/panelWyswietlPrzystanek/_panelWyswietlPrzystanek.sass
@@ -1,21 +1,18 @@
 @charset "UTF-8"
-.panelUsers
-  min-width: 960px
+.panelWyswietlPrzystanek
+  min-width: 700px
   +TAB_MAX
     position: relative !important
     width: 100% !important
     margin: 55px auto 0
     //bottom: 0 !important
     top: 0 !important
-
   &.-hidden
     opacity: 0
     z-index: 0
     transform: scale(0.5, 0.5)
     display: none
-  &__list
-    max-width: 920px
-    width: 100% !important
+
   &__wrapper
     position: relative
     padding: 20px
@@ -24,14 +21,19 @@
   &__title
     font-family: Lato, sans-serif
     font-weight: 500
+
     font-size: 15px
+
     text-align: center
+
     background: #3c8dbc
     color: #fff
     padding: 5px
     opacity: 0.9
+
     +PHONE_ONLY
       text-align: center
+
   &__subtitle
     font-family: Lato, sans-serif
     font-weight: 300
@@ -40,6 +42,7 @@
     font-size: 12px
     letter-spacing: 2px
     text-align: left
+
     color: #222
     font-style: italic
     +PHONE_ONLY
@@ -96,11 +99,53 @@
       &:focus
         border-bottom: 2px solid #4AAED4
 
+    label
+      cursor: pointer
+      margin-left: 0
+      color: #9C969C
+      font-weight: 400
+      max-width: 300px
+      .icon
+        width: 17px
+        height: 18px
+        border-radius: 2px
+        position: relative
+        display: inline-block
+        border: 1px solid
+      .icon:before,.icon:after
+        content: ''
+        width: 10px
+        height: 2px
+        background: white
+        position: absolute
+        transition: all .2s ease-in-out 0s
+      .icon:before
+        left: 3px
+        width: 5px
+        bottom: 6px
+        transform: scale(0) rotate(0)
+      .icon:after
+        top: 6px
+        right: 0
+        transform: scale(0) rotate(0)
+
+    .check
+      display: none
+    .check:checked + label
+      color: #4AAED4
+      .icon
+        background: #4AAED4
+      .icon:before
+        transform: scale(1) rotate(45deg)
+      .icon:after
+        transform: scale(1) rotate(-45deg)
+
+
     button
       text-transform: uppercase
-      background: #008d4c
-      border-color: #008d4c
+      background: #4AAED4
       color: white
+      border: none
       padding: 15px 20px
       border-radius: 25px
       max-width: 300px
@@ -112,7 +157,7 @@
     margin-top: 20px
     margin-bottom: 5px
     display: flex
-    justify-content: flex-start
+    justify-content: flex-end
     flex-direction: row
     +PHONE_ONLY
       justify-content: center
@@ -122,19 +167,25 @@
       flex-shrink: 1
       font-size: 10px
       text-transform: uppercase
-      background: #00a65a
-      border-color: #008d4c
+      background: #4F98C2
       color: white
+      border: none
       padding: 10px 10px
+      //border-radius: 5px
       max-width: 150px
       width: 100%
       margin-right: 5px
       text-decoration: none !important
       text-align: center
       &:hover
-        background: #008d4c
+        background: rgba(60, 141, 188, 1)
+      &.green
+        background: #00a65a
+        &:hover
+          background: #008d4c
 
   &__content
+    //border-top: 2px solid #D2E3E9
     padding-top: 15px
     &__Title
       font-family: Lato, sans-serif
@@ -142,29 +193,30 @@
       line-height: 1.3
       letter-spacing: 1.25px
       text-align: left
-      color: #222
       text-transform: uppercase
+      color: #222
+      padding-bottom: 15px
       +PHONE_ONLY
         text-align: center
-    &__Filtr
+    &__form
       display: flex
       align-content: space-between
       flex-wrap: wrap
+      justify-content: space-between
       &__item
+
         &.check
           flex-basis: auto
           text-align: center
           margin-right: 2px
+
         overflow: hidden
-        flex-basis: 25%
-        padding: 10px
+        flex-basis: 30%
+        padding: 10px 0
         margin: 5px 0
-        &:first-of-type
-          padding-left: 0
-        &:last-of-type
-          padding-right: 0
 
         input
+
           box-shadow: none !important
           outline: none
           font-weight: 400
@@ -187,7 +239,6 @@
             background-color: #3c8dbc
             border: 1px solid #3c8dbc
         label
-
           display: inline-block
           cursor: pointer
           position: relative
@@ -210,6 +261,9 @@
           font-size: 10px
           line-height: 10px
           letter-spacing: 1px
+        span.item
+          margin-bottom: 5px
+          display: block
 
         .select2
           &-container
@@ -229,7 +283,7 @@
                 min-height: 34px
                 .select2-selection
                   &__rendered
-                    line-height: 24px
+                    line-height: 22px
                   &__choice
                     background-color: #3c8dbc
                     border: none
@@ -246,17 +300,19 @@
                 margin-top: 7px
             &--default.select2-container--focus .select2-selection--multiple
               border: 1px solid #aaa !important
+
   &__close
     transition: opacity 0.36s ease
     position: absolute
     top: 5px
     right: 10px
+    //color: #222222
     cursor: pointer
     opacity: 0.8
     color: #fff
     &:hover
       opacity: 1
-    .panelUsers__icon
+    .panelWyswietlPrzystanek__icon
       font-size: 1.8em !important
   &__icon
     font-size: 3em
