--- a/app/jade/_header.jade
+++ b/app/jade/_header.jade
@@ -1,36 +1,35 @@
 //
    Created by salimike on 18.03.16.
-.bar
 .header
   .header__corner
     i.fa.fa-bus
   .header__switcher.-hidden
     .background
     ul.header__panel
-      li.header__item#panel-autobusyButton
+      li.header__item
         a(href="#/bus" )
           span.header__button
             span.header__buttonIconBG
               .header__buttonIcon.fa.fa-bus
             | Autobusy
-      li.header__item#panel-przystankiButton
+      li.header__item
         a(href="#/busstop" )
           span.header__button
             span.header__buttonIconBG
               .header__buttonIcon.fa.fa-map-signs
             | Przystanki
-      li.header__item#panel-trasyButton
+      li.header__item
         span.header__button
           span.header__buttonIconBG
             .header__buttonIcon.fa.fa-road
           | Trasy
-      li.header__item#panel-uzytkownicyButton
-        a(href="#/users" )
+      li.header__item
+        a(href="#/user" )
           span.header__button
             span.header__buttonIconBG
               .header__buttonIcon.fa.fa-users
             | Użytkownicy
-      li.header__item#panel-kontroleButton
+      li.header__item
         span.header__button
           span.header__buttonIconBG
             .header__buttonIcon.fa.fa-eye
@@ -43,35 +42,35 @@
   .headerProfile__switcher.-hidden
     .background
     ul.headerProfile__panel
-      li.headerProfile__item#panel-loginButton
+      li.headerProfile__item
         a(href="#/login" )
           span.headerProfile__button
             span.headerProfile__buttonIconBG
               .headerProfile__buttonIcon.fa.fa-power-off
             | Logowanie
-      li.headerProfile__item#panel-registerButton
+      li.headerProfile__item
         a(href="#/register" )
           span.headerProfile__button
             span.headerProfile__buttonIconBG
               .headerProfile__buttonIcon.fa.fa-sign-in
             | Rejestracja
-      li.headerProfile__item#panel-odzyskajKontoButton
+      li.headerProfile__item
         a(href="#/forgot" )
           span.headerProfile__button
             span.headerProfile__buttonIconBG
               .headerProfile__buttonIcon.fa.fa-key
             | Odzyskaj konto
-      li.headerProfile__item#panel-mojeKontoButton
+      li.headerProfile__item
         span.headerProfile__button
           span.headerProfile__buttonIconBG
             .headerProfile__buttonIcon.fa.fa-user
           | Moje Konto
-      li.headerProfile__item#panel-InformacjeButton
+      li.headerProfile__item
         span.headerProfile__button
           span.headerProfile__buttonIconBG
             .headerProfile__buttonIcon.fa.fa-info-circle
           | Informacje
-      li.headerProfile__item#panel-wylogujButton
+      li.headerProfile__item
         a(href="#/login")
           span.headerProfile__button
             span.headerProfile__buttonIconBG
