--- a/app/jade/panelResetPassword.jade
+++ b/app/jade/panelResetPassword.jade
@@ -36,7 +36,7 @@
         input(name="user_password_again_new" type="password" placeholder="Powtórz hasło")
         i.fa.fa-lock
       button(type="submit") Zatwierdz nowe hasło
-    a(href="#")
+    a(href="#/")
       span.panelResetPassword__close
         span.panelResetPassword__icon.fa.fa-times
     .panelResetPassword__navigation Nie masz konta?
